# irreale

./: Cargo.toml  Makefile  README.md  build.rs  config.yaml  irreale-netinst.sh  iwim-init.sh  rustfmt.toml  setup.py  setup.sh
irr_core/: Cargo.toml
lib/: libtest.c
lib/gui/: ui.jl
src/: init.rs  main.rs
