[package]
name = "irreale"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
categories = ["editor"]
authors = ["Harvey Wu <harveywu@outlook.it>"]
repository = "https://github.com/zervwave/irreale"
description = "Experimental modular development environment for coding."

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [
    
]
